Changing background image css to render correctly on mobile browser

--- a/src/app/IntroPage/IntroPage.scss
+++ b/src/app/IntroPage/IntroPage.scss
@@ -3,7 +3,8 @@
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)),
     fixed url("./assets/images/mainImage.png");
   background-size: cover;
-  background-position: top;
+  background-position: center center;
+  background-repeat: no-repeat;
   display: flex;
   flex-direction: column;
   align-items: center;
